--- a/README
+++ b/README
@@ -5,4 +5,4 @@ Following user stories were completed:
 4. Subsequent searches will have any filters applied to the search results
 5. User can tap on any image in results to see the image full-screen
 6. User can scroll down “infinitely” to continue loading more image results (up to 8 pages)
-
+Video Link: http://youtu.be/wvmlqCWwh-k
